--- a/week-6/index.html
+++ b/week-6/index.html
@@ -6,12 +6,14 @@
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-    <div class ="grid">
+
+    
+    <div class ="jumbotron">
         <div id="quiz">
             <h1>
                 JavaScript Trivia
             </h1>
-            <hr style="margin-bottom: 20px">
+            <hr style="margin-bottom: 2px">
             <p id="question"> </p>
             <div class="answers">
                 <button id="btn0"><span id="choice0"></span></button>
