--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-
-    
-    <div class ="jumbotron">
+    <div class ="grid">
         <div id="quiz">
             <h1>
                 JavaScript Trivia
             </h1>
-            <hr style="margin-bottom: 2px">
+            <hr style="margin-bottom: 20px">
             <p id="question"> </p>
             <div class="answers">
                 <button id="btn0"><span id="choice0"></span></button>
